# ReviewTrash

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: windows-release.yml
release/: README.md
review_trash/: __init__.py  __main__.py  app.py  ass_parser.py  dialogs.py  image_matcher.py  main_window.py  project_store.py  session_store.py  toolbar.py  ui_logic.py  ui_strings.py
scripts/: build.ps1  build.sh  release_windows.spec
tests/: test_backend.py  test_ci_windows_release_workflow.py  test_project_store.py  test_ui_logic.py
