[project]
name = "review-trash"
version = "0.1.0"
description = "Desktop subtitle review tool for ASS + PNG workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "PySide6>=6.8",
]

[dependency-groups]
dev = [
  "pyinstaller>=6.16",
  "pyrefly",
  "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"
